--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,10 @@
       font-size: 1rem;
       line-height: 1.5;
       overflow: hidden;
+      z-index: 2;
     }
 
+    /* ✅ Logo floats in the middle of the answer box */
     .solution-box::before {
       content: "";
       position: absolute;
@@ -86,6 +88,7 @@
       z-index: 0;
     }
 
+    /* Keep text above the logo */
     .solution-box * {
       position: relative;
       z-index: 1;
